# schoolcode

CIS210-Beginner-Python/: README.md
CIS210-Beginner-Python/Lab/: lab1.py  lab2.py  pigLatin.py
CIS210-Beginner-Python/Week 1/: alphacode.py  jumbler.py
CIS210-Beginner-Python/Week 10/: symcalc.py
CIS210-Beginner-Python/Week 2/: calpr.py  counts.py  majors.txt  part.txt  passwdcheck.py
CIS210-Beginner-Python/Week 3/: calendar.py  days_till.py
CIS210-Beginner-Python/Week 4/: cavern.py  grid.py
CIS210-Beginner-Python/Week 5/: routes.py  sample-map-noreach.txt  sample-map.txt  skip-map.txt
CIS210-Beginner-Python/Week 6/: boggler.py  game_dict.py
CIS210-Beginner-Python/Week 7/: Keiko.ag  Kevin.ag  Maria.ag  Stefano.ag  agenda.py  meetme.py  test.py
CIS210-Beginner-Python/Week 8/: grid.py  sdkboard.py  sdkdisplay.py  sdktactics.py  sdktextview.py  sudoku.py
CIS211-Intermediate-Python/Project 1/: hello.py  print_names.py
CIS211-Intermediate-Python/Project 2/: Card.py  test_Cards.py
CIS211-Intermediate-Python/Project 3/: Card.py  Deck.py  test_decks.py
CIS211-Intermediate-Python/Project 4/: flipper.py  hello.py  payment.py
CIS211-Intermediate-Python/Project 5/: Card.py  Deck.py  blackjack.py
CIS211-Intermediate-Python/Project 6/: queries.txt  summary.py
CIS211-Intermediate-Python/Project 7/: fp.py  house.txt
CIS211-Intermediate-Python/Project 8/: rescrapper.py  scrapper.py
CIS212-Beginner-Java/.metadata/: version.ini
CIS313-Datastructures/Lab0/: lab0.java
CIS313-Datastructures/Lab1/: EC.java  Node.java  Queue.java  Stack.java  TwoStackQueue.java  lab1.java
CIS313-Datastructures/Lab2/: BST.java  TreeCompare.java  lab2.java
CIS313-Datastructures/Lab3/: MaxHeap.java  (+2 more)
CIS314-Computer-Orginization/: README.md
CIS399-Parallelism/projects/Rasterizer/: CMakeLists.txt  camera.cxx  camera.h  functions.cxx  functions.h  io.cxx  main.cxx  main.h  matrix.cxx  matrix.h  screen.cxx  triangle.cxx  triangle.h
CIS399-Parallelism/projects/renderer/serial_src/: CMakeLists.txt  Makefile  RenderFunctions.cxx  Renderer.cxx  Screen.h  Utilities.h
CIS399-Parallelism/projects/renderer/tbb_src/: CMakeLists.txt  Camera.h  LightingParameters.h  MatrixOperations.h  RenderFunctions.cxx  Renderer.cxx
CIS441-Graphics/FinalProject/: CMakeLists.txt  solar.cxx
CIS441-Graphics/Project1/finished/: CMakeLists.txt  camera.cxx  functions.cxx  functions.h  io.h  lighting.h  main.cxx  main.h  matrix.cxx  matrix.h  screen.cxx  screen.h  triangle.cxx  triangle.h
CIS441-Graphics/Project1/finished/main.app/Contents/: Info.plist
CIS441-Graphics/Project1/finished/main.app/Contents/MacOS/: main
(+383 files in other folders)
